--- a/frontend/group.html
+++ b/frontend/group.html
@@ -65,6 +65,27 @@
                 <p id="descriptionText"></p>
             </section>
 
+            <!-- View Toggle -->
+            <section class="view-toggle">
+                <button class="view-btn active" id="viewPosts" data-view="posts">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+                        <rect x="3" y="3" width="7" height="7" stroke="currentColor" stroke-width="2"/>
+                        <rect x="14" y="3" width="7" height="7" stroke="currentColor" stroke-width="2"/>
+                        <rect x="3" y="14" width="7" height="7" stroke="currentColor" stroke-width="2"/>
+                        <rect x="14" y="14" width="7" height="7" stroke="currentColor" stroke-width="2"/>
+                    </svg>
+                    <span>Posts</span>
+                </button>
+                <button class="view-btn" id="viewMedias" data-view="medias">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+                        <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
+                        <circle cx="8.5" cy="8.5" r="1.5" fill="currentColor"/>
+                        <path d="M21 15l-5-5L5 21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <span>Medias</span>
+                </button>
+            </section>
+
             <!-- Posts Grid -->
             <section class="posts-section">
                 <div class="posts-grid" id="postsGrid">
