Checkpoint first deploy

--- a/frontend/group.html
+++ b/frontend/group.html
@@ -150,6 +150,7 @@
         </div>
     </div>
 
+    <script src="static/js/config.js"></script>
     <script src="static/js/group.js"></script>
 </body>
 </html>
