--- a/frontend/app.html
+++ b/frontend/app.html
@@ -62,8 +62,8 @@
                 <span id="dropdownInitial">T</span>
             </div>
             <div class="dropdown-user-info">
-                <span class="dropdown-username" id="dropdownUsername">Thomas</span>
-                <span class="dropdown-email" id="dropdownEmail">thomas@example.com</span>
+                <span class="dropdown-username" id="dropdownUsername">User</span>
+                <span class="dropdown-email" id="dropdownEmail">user@example.com</span>
             </div>
         </div>
         <div class="dropdown-divider"></div>
@@ -73,13 +73,6 @@
                 <circle cx="12" cy="7" r="4" stroke="currentColor" stroke-width="2"/>
             </svg>
             Mon profil
-        </a>
-        <a href="profile.html" class="dropdown-item">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
-                <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
-                <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-            </svg>
-            Parametres
         </a>
         <div class="dropdown-divider"></div>
         <button class="dropdown-item logout" id="logoutBtn">
@@ -97,7 +90,7 @@
         <div class="app-container">
             <!-- Welcome -->
             <section class="welcome-section">
-                <h1>Bonjour, <span id="welcomeName">Thomas</span></h1>
+                <h1>Bonjour, <span id="welcomeName">Utilisateur</span></h1>
                 <p>Selectionnez un groupe pour voir les publications</p>
             </section>
 
@@ -166,6 +159,36 @@
         </div>
     </div>
 
+    <!-- Join Group Modal -->
+    <div class="modal-overlay" id="joinModal">
+        <div class="modal modal-small">
+            <div class="modal-header">
+                <h2>Rejoindre un groupe</h2>
+                <button class="modal-close" id="closeJoinModal">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                </button>
+            </div>
+            <form class="modal-body" id="joinGroupForm">
+                <p class="form-description">Entrez le code d'invitation que vous avez recu pour rejoindre le groupe.</p>
+                <div class="form-field">
+                    <label for="inviteCode">Code d'invitation</label>
+                    <input
+                        type="text"
+                        id="inviteCode"
+                        placeholder="Ex: ABC12XYZ"
+                        required
+                        maxlength="8"
+                        style="text-transform: uppercase; letter-spacing: 0.2em; font-family: 'Courier New', monospace; font-weight: 600; font-size: 1.2rem; text-align: center;"
+                    >
+                </div>
+                <button type="submit" class="btn btn-primary btn-full">Rejoindre</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="static/js/config.js"></script>
     <script src="static/js/app.js"></script>
 </body>
 </html>
