--- a/frontend/publish.html
+++ b/frontend/publish.html
@@ -120,6 +120,7 @@
         </div>
     </div>
 
+    <script src="static/js/config.js"></script>
     <script src="static/js/publish.js"></script>
 </body>
 </html>
