--- a/frontend/register.html
+++ b/frontend/register.html
@@ -143,6 +143,7 @@
         </div>
     </div>
 
+    <script src="static/js/config.js"></script>
     <script src="static/js/auth.js"></script>
 </body>
 </html>
