2e déployement avec script automatique

--- a/frontend/group_info.html
+++ b/frontend/group_info.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="static/css/styles.css">
     <link rel="stylesheet" href="static/css/app.css">
     <link rel="stylesheet" href="static/css/group_info.css">
+    <link rel="stylesheet" href="static/css/modals.css">
 </head>
 <body class="app-body">
     <!-- Header -->
@@ -219,6 +220,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/modals.js"></script>
     <script src="static/js/group_info.js"></script>
 </body>
 </html>
