--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="static/css/styles.css">
     <link rel="stylesheet" href="static/css/app.css">
     <link rel="stylesheet" href="static/css/admin.css">
+    <link rel="stylesheet" href="static/css/modals.css">
 </head>
 <body class="app-body">
     <!-- Header -->
@@ -154,6 +155,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/modals.js"></script>
     <script src="static/js/admin.js"></script>
 </body>
 </html>
