Deploy après incident chez OVH Sécurisation et non-exposition des containers.

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -155,6 +155,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/auth-guard.js"></script>
     <script src="static/js/modals.js"></script>
     <script src="static/js/admin.js"></script>
 </body>
