--- a/frontend/publish.html
+++ b/frontend/publish.html
@@ -121,6 +121,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/auth-guard.js"></script>
     <script src="static/js/publish.js"></script>
 </body>
 </html>
