--- a/frontend/app.html
+++ b/frontend/app.html
@@ -189,6 +189,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/auth-guard.js"></script>
     <script src="static/js/app.js"></script>
 </body>
 </html>
