--- a/frontend/group.html
+++ b/frontend/group.html
@@ -172,6 +172,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/auth-guard.js"></script>
     <script src="static/js/modals.js"></script>
     <script src="static/js/group.js"></script>
 </body>
