--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -52,10 +52,6 @@
                     <p class="profile-email" id="profileEmail">email@example.com</p>
                     <div class="profile-stats">
                         <div class="stat-item">
-                            <span class="stat-value" id="postsCount">0</span>
-                            <span class="stat-label">posts</span>
-                        </div>
-                        <div class="stat-item">
                             <span class="stat-value" id="groupsCount">0</span>
                             <span class="stat-label">groupes</span>
                         </div>
@@ -81,35 +77,8 @@
                 </button>
             </section>
 
-            <!-- Tabs -->
-            <section class="profile-tabs">
-                <button class="tab-btn active" data-tab="posts">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <rect x="3" y="3" width="7" height="7" stroke="currentColor" stroke-width="2"/>
-                        <rect x="14" y="3" width="7" height="7" stroke="currentColor" stroke-width="2"/>
-                        <rect x="3" y="14" width="7" height="7" stroke="currentColor" stroke-width="2"/>
-                        <rect x="14" y="14" width="7" height="7" stroke="currentColor" stroke-width="2"/>
-                    </svg>
-                    <span>Publications</span>
-                </button>
-                <button class="tab-btn" data-tab="settings">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-                        <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
-                        <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                    </svg>
-                    <span>Parametres</span>
-                </button>
-            </section>
-
-            <!-- Tab Content: Posts -->
-            <section class="tab-content active" id="postsTab">
-                <div class="posts-grid" id="postsGrid">
-                    <!-- Posts will be loaded dynamically -->
-                </div>
-            </section>
-
-            <!-- Tab Content: Settings -->
-            <section class="tab-content" id="settingsTab">
+            <!-- Settings -->
+            <section class="settings-section" id="settingsTab">
                 <div class="settings-list">
                     <div class="settings-group">
                         <h3 class="settings-group-title">Compte</h3>
@@ -347,6 +316,7 @@
     </div>
 
     <script src="static/js/config.js"></script>
+    <script src="static/js/auth-guard.js"></script>
     <script src="static/js/profile.js"></script>
 </body>
 </html>
